--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,4 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
+    <!-- <permission android:requestLegacyExternalStorage="true"/> -->
+    <uses-permission android:name="android.permission.INTERNET"/>
     <application
         android:label="sports_cbr"
         android:name="${applicationName}"
