--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -22,6 +22,9 @@ linter:
   # producing the lint.
   rules:
     use_build_context_synchronously
+analyzer:
+  errors:
+    unnecessary_null_comparison: ignore
     # avoid_print: false  # Uncomment to disable the `avoid_print` rule
     # prefer_single_quotes: true  # Uncomment to enable the `prefer_single_quotes` rule
 
