--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -5,6 +5,7 @@ plugins {
     // END: FlutterFire Configuration
     id "kotlin-android"
     id "dev.flutter.flutter-gradle-plugin"
+    // id 'com.google.gms.google-services' version '4.4.2' apply false
 }
 
 def localProperties = new Properties()
@@ -67,4 +68,6 @@ flutter {
     source '../..'
 }
 
-dependencies {}
+// dependencies {
+//     implementation platform('com.google.firebase:firebase-bom:33.3.0')
+// }
