--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,13 +40,10 @@ dependencies:
   firebase_storage: ^12.1.0
   provider: ^6.1.2
   firebase_auth: ^5.1.1
-  carousel_slider: ^4.2.1
   flutter_staggered_grid_view: ^0.6.0
   transparent_image: ^2.0.1
   alphabet_list_scroll_view: ^2.0.0
   # faker: ^2.0.0
-  image_picker: ^1.1.2
-  image_cropper: ^4.0.0
   uuid: ^4.4.2
   dio: ^5.5.0+1
   brasil_fields: ^1.15.0
@@ -54,7 +51,12 @@ dependencies:
   geolocator_android: 4.5.5
   sliding_up_panel: ^2.0.0+1
   image_gallery_saver: ^2.0.3
-  screenshot: ^2.5.0
+  carousel_slider: ^5.0.0
+  screenshot: ^3.0.0
+  image_cropper: ^8.0.2
+  image_picker: ^1.1.2
+  permission_handler: ^8.1.6
+  flutter_signin_button: ^2.0.0
 
 
 
