--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@mercadopago/sdk-react": "^0.0.19",
+    "cors": "^2.8.5",
     "express": "^4.21.0",
     "mercadopago": "^2.0.15"
   },
@@ -8,6 +9,7 @@
   "description": "A new Flutter project.",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "directories": {
     "lib": "lib",
     "test": "test"
@@ -16,5 +18,6 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "keywords": []
 }
